# taizo

./: AGENTS.md  Cargo.toml  schema.sql  taizo.service
src/: main.rs
src/commands/: auditlog.rs  economy.rs  emoji.rs  fun.rs  info.rs  mod.rs  moderation.rs  owner.rs  reactionrole.rs  ticket.rs  utility.rs
