[package]
name = "taizo"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
poise = "0.6"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
image = "0.25"
lazy_static = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
